# custom-hashmap-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  bc10ab4c-b72e-4fe9-aaaa-3fad86f88913  bench.cc  custom_map.hpp  default.data.collapsed - perf is bad because of linear probing  fast_linear_probe_fingerprint.diff  fast_simd_hash.diff  faster_hash_function.diff  map_sep_slots_and_cities.hpp  measurements.txt  psl_print.cc
blog/: blog.md
results/stdmap/: stdmap.md
src/: baseline.hpp  bench.cc  fpprobe.hpp  linprobehm.hpp  nogooglebench.cc  soaprobe.hpp  swiss.hpp  utils.hpp
